[package]
name = "simple_blockchain"
version = "0.1.0"
authors = ["Zhouyu Qian <qzy@qzy.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
serde = "1.0.104"
serde_derive = "1.0.104"
bincode = "1.2.1"
expanduser = "1.2.1"
