[package]
name = "simple_blockchain"
version = "0.1.0"
authors = ["Zhouyu Qian <qzy@qzy.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
serde = { version = "1.0.104", features = ["derive"] }
bincode = "1.2.1"
expanduser = "1.2.1"
rusqlite = "0.21.0"
libsqlite3-sys = "0.17.0"
bs58 = "0.3.0"
thiserror = "1.0.16"
anyhow = "1.0.28"

[lib]
path = "src/libblockchain.rs"
